--- a/packages/nouns-webapp/src/locales/en-US.po
+++ b/packages/nouns-webapp/src/locales/en-US.po
@@ -266,8 +266,12 @@ msgid "Alps govern <0>Alps DAO</0>. Alps can vote on proposals or delegate their
 msgstr "Alps govern <0>Alps DAO</0>. Alps can vote on proposals or delegate their vote to a third party. A minimum of <1>{alpsRequired} {0}</1> is required to submit proposals."
 
 #: src/components/Documentation/index.tsx
-msgid "Alps that receive no bids are sent to a treasury wallet for rescue opportunities and burn events."
-msgstr "Alps that receive no bids are sent to a treasury wallet for rescue opportunities and burn events."
+#~ msgid "Alps that receive no bids are sent to a treasury wallet for rescue opportunities and burn events."
+#~ msgstr "Alps that receive no bids are sent to a treasury wallet for rescue opportunities and burn events."
+
+#: src/components/Documentation/index.tsx
+msgid "Alps that receive no bids are sent to the Warming Hut (warminghut.eth), a wallet for rescue opportunities and burn events."
+msgstr "Alps that receive no bids are sent to the Warming Hut (warminghut.eth), a wallet for rescue opportunities and burn events."
 
 #: src/components/Documentation/index.tsx
 msgid "Alps token artwork is in the {publicDomainLink}."
@@ -1007,6 +1011,10 @@ msgstr "The Alpers"
 #: src/pages/Alpers/index.tsx
 msgid "The Alpers reward is intended as compensation for our pre and post-launch contributions to the project, and to help us participate meaningfully in governance as the project matures. Since there are 10 Alpers, after 5 years each Alper could receive up to 1% of the Alp supply."
 msgstr "The Alpers reward is intended as compensation for our pre and post-launch contributions to the project, and to help us participate meaningfully in governance as the project matures. Since there are 10 Alpers, after 5 years each Alper could receive up to 1% of the Alp supply."
+
+#: src/components/Documentation/index.tsx
+msgid "The Alpine Council receives rewards in the form of Alps (10% of supply for first 5 years)."
+msgstr "The Alpine Council receives rewards in the form of Alps (10% of supply for first 5 years)."
 
 #: src/components/Documentation/index.tsx
 #~ msgid "The Alps Auction Contract will act as a self-sufficient Alp generation and distribution mechanism, auctioning one Alp every 24 hours, forever. 100% of auction proceeds (ETH) are automatically deposited in the Alps DAO treasury, where they are governed by Alp owners."
